# my_auto_aim

./: README.md
PythonScripts/: classifier_training.py  requirements.txt  run.py
PythonScripts/assets/armor_pattern_dataset/test/: 25_8.json
PythonScripts/assets/armor_pattern_dataset/train/: .goutputstream-YF9IE2  15_25.json  16_7.json  21_1.json  2_22.json  38_7.json  (+7 more)
bigwork0/: CMakeLists.txt
bigwork0/Camera/Data/: 042071320236.mvdat  042071320239.mvdat  049020710147.mvdat  049020710157.mvdat
bigwork0/Camera/log/: warning_20231010-211044.2801  warning_20231010-214221.3643  warning_20231010-220852.3037  warning_20231010-221049.3442  warning_20231010-221217.3974  warning_20231010-221631.2517
bigwork0/include/: camera.hpp  classifier.hpp  detector.hpp  getv.hpp  img_tools.hpp  solvepnp.hpp  types.hpp
bigwork0/model/: model.onnx
bigwork0/src/: camera.cpp  classifier.cpp  detector.cpp  getv.cpp  main.cpp  solvepnp.cpp
camera_calibration/: CMakeLists.txt
camera_calibration/include/: calibratecamera.hpp  camera.hpp  eye_in_hand.hpp  plotter.hpp
camera_calibration/src/: calibratecamera.cpp  camera.cpp  eye_in_hand.cpp  main.cpp
eyeinhand/: CMakeLists.txt
eyeinhand/include/: Calibratecamera.hpp
eyeinhand/io/: cboard.hpp  mv_camera.hpp  socketcan.hpp
eyeinhand/src/: Calibratecamera.cpp  main.cpp
eyeinhand/tools/: exiter.hpp  img_tools.hpp  logger.hpp  math_tools.hpp
imu/: CMakeLists.txt
imu/include/: math_tools.hpp  socketcan.hpp
imu/src/: main.cpp
plotjuggler/: CMakeLists.txt
plotjuggler/include/: plotter.hpp
plotjuggler/src/: main.cpp
